<resources>
    <string name="app_name">一学</string>
    <string name="action_settings">Settings</string>

    <string name="register_bt">注册</string>
    <string name="register_username_hint">你的昵称</string>
    <string name="register_password_hint">设置密码</string>
    <string name="register_email_hint">你的电子邮件</string>
    <string name="register_hint">—— 社交账号直接登录 ——</string>

    <string name="login_bt">登录</string>
    <string name="login_username_hint">昵称</string>
    <string name="login_password_hint">密码</string>
    <string name="login_hint">—— 社交账号直接登录 ——</string>
    <string name="login_register">新用户注册</string>

    <string name="speaker">主讲人 : </string>
    <string name="join_num_hint">人已参与</string>

    <string name="create_name">Live 主题</string>
    <string name="create_price">Live 价格</string>
    <string name="create_time">开始时间</string>
    <string name="create_summary">Live 简介</string>
    <string name="create_type">Live 类型</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
</resources>
