<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_wrapper"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_text_wrapper"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="368dp"
        android:layout_height="240dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_marginTop="20dp"
            android:hint="@string/register_username_hint"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/email_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="352dp"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:hint="@string/register_email_hint"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/username_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/password_layout"
            android:layout_width="352dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:hint="@string/register_password_hint"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
            android:layout_width="352dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/bt_register"
        android:text="@string/register_bt"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_wrapper"
        app:layout_constraintBottom_toTopOf="@+id/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="368dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/hint"
        android:text="@string/register_hint"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_register"
        app:layout_constraintBottom_toTopOf="@+id/register_qq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="111dp" />

    <Button
         android:id="@+id/register_qq"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="148dp" />

</android.support.constraint.ConstraintLayout>